Create resource customer

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10991,3 +10991,14 @@ a.text-dark:focus {
   width: 100%;
 }
 
+#list-customer {
+  max-height: 80vh;
+  margin-bottom: 10px;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
+#list-customer::-webkit-scrollbar {
+  display: none;
+}
+
