--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -114,3 +114,14 @@
     min-width: 0;
     width: 100%;
   }
+
+#list-customer {
+    max-height: 80vh;
+    margin-bottom: 10px;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch;
+}
+
+#list-customer::-webkit-scrollbar {
+    display: none;
+}
