--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -125,3 +125,23 @@
 #list-customer::-webkit-scrollbar {
     display: none;
 }
+
+.user {
+    margin-top: 0;
+    margin-bottom: 15px;
+    padding: 10px;
+}
+
+.user-pic img{
+    width: 25%;
+    height: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
+}
+
+.user-title {
+    display: inline;
+    font-size: 16px;
+    margin-left: 10px;
+}
